
2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_tidy): don't exit if runtime isn't initialized yet

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* call.c, common.c, fileio.c, intrinsic.c, screenio.c:
	  surrounded code parts that cannot be tested by LCOV_EXCP markers

2017-08-12  Ron Norman <rjn@inglenet.com>

	* common.c: cob_stop_run issue callbacks to free any decimal memory
	* common.c: avoid infinite loop walking COB_MODULE list when RECURSIVE
	            modules are being used

2017-08-06 Ron Norman <rjn@inglenet.com>

	* fileio.c (cob_file_external_addr): fixed bug #404, where the
	  cob_file_key for a RELATIVE file was not allocated.

2017-07-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c: moved cob_sys_get_char and added parts for !COB_GEN_SCREENIO

2017-07-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h [__MINGW32__]: added missing defines

2017-07-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: increased MAX_FD_RECORD to 64MB and introduced
	  MAX_FD_RECORD_IDX with the old 64KB limit

2017-07-16  Edward Hart <edward.dan.hart@gmail.com>

	* exception.def: update to COBOL 2014 and added finalizer exception.

2017-07-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* fileio.c: checked the now optional sort-return before accessing it

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* general: surrounded exception ABORTs that cannot be tested by
	  LCOV_EXCP markers

2017-06-04  Ron Norman <rjn@inglenet.com>

	* common.c: Improved 'cobcrun -r' display for when
	  unsetenv is used in runtime.cfg to show environment variable
	  was removed and runtime.cfg variable was then present

2017-05-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* system.def: replaced misleading name C$PRINTABLE (OC-extension,