@@ -2,6 +2,8 @@
 2017-08-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c (cob_tidy): don't exit if runtime isn't initialized yet
+	* common.h, coblocal.h: moved declaration of cob_strdup to allow it
+	  to be called like the other memory functions
 
 2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
